# MatrixCPP

./: CMakeLists.txt  Doxyfile  README.md  conanfile.py  conanfile.txt  requirements.txt  run_e2e_test.py
.conan/profiles/: debug  release
.github/workflows/: main.yml  md_style_check.yml  release_build.yml
algo/: CMakeLists.txt
algo/include/algo/: algo.hh
ci/profiles/ubuntu-22.04/: clang_debug.profile  clang_release.profile
driver/: CMakeLists.txt  main.cc
matrix/: CMakeLists.txt
matrix/include/matrix/: comparator.hh  matrix.hh  matrix_chain.hh  numeric_traits.hh
matrix/include/matrix/detail/: diag_iterator.hh
matrix/tests/: allocator.cc  ctor.cc  det.cc  main.cc
memory_manager/: CMakeLists.txt
memory_manager/include/mm/: mm.hh
tests/: CMakeLists.txt  run_e2e_test.py
tests/e2e/: config.py  generate_matrices.py  run_e2e_test.py
tests/e2e/ans/: ans_1.out  ans_10.out  ans_2.out  ans_3.out  ans_4.out  ans_5.out  ans_6.out  ans_7.out  ans_8.out  ans_9.out
tests/e2e/input/: test_1.in  test_10.in  test_2.in  test_3.in  test_4.in  test_5.in  test_6.in  test_7.in  test_8.in  test_9.in
tests/src/: matrix_unit_test.cc  vector_unit_test.cc
tests/unit/: matrix_unit_test.cc  vector_unit_test.cc
vector/: CMakeLists.txt
vector/include/vector/: vector.hh
vector/include/vector/detail/: iterator_base.hh  vector_buffer.hh
vector/tests/: construction.cc  main.cc
